--- a/index.html
+++ b/index.html
@@ -7,10 +7,37 @@
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.0/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="">
+    <!-- fontawosome -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+    <main class="min-h-screen bg-[#010313]">
+        <!-- hoem screen -->
+        <section class="home  min-h-screen flex justify-center items-center bg-no-repeat bg-center bg-[url(images/background.png)]">
+         <div class="text-center space-y-5 hidden">
+            <h1 class="text-9xl text-white anton-regular">ALPHABET CLASH
+            </h1>
+            <p class="text-white text-2xl">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+            <button class="btn btn-white text-black">Play Now</button>
+         </div>
+        </section>
+        <!-- playground start -->
+        <section id="home">
+            <!-- screen -->
+            <!-- keyboard -->
+            <!-- btn score -->
+        </section>
+        <section id="home">
+
+        </section>
+    </main>
 
     <script src="script.js"></script>
 </body>
