--- a/index.html
+++ b/index.html
@@ -18,21 +18,72 @@
 
 <body>
 
-    <main class="min-h-screen bg-[#010313]">
+    <main class="min-h-screen bg-[#010313] bg-no-repeat bg-center bg-[url(images/background.png)]">
         <!-- hoem screen -->
-        <section class="home  min-h-screen flex justify-center items-center bg-no-repeat bg-center bg-[url(images/background.png)]">
-         <div class="text-center space-y-5 hidden">
+        <section class="home hidden  min-h-screen flex justify-center items-center ">
+         <div class="text-center space-y-5 ">
             <h1 class="text-9xl text-white anton-regular">ALPHABET CLASH
             </h1>
             <p class="text-white text-2xl">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
             <button class="btn btn-white text-black">Play Now</button>
          </div>
+    
         </section>
         <!-- playground start -->
-        <section id="home">
-            <!-- screen -->
-            <!-- keyboard -->
-            <!-- btn score -->
+        <section id="playground  ">
+
+            <div class="space-y-5 flex justify-center min-h-screen items-center flex-col">
+                <!-- keyboard -->
+                <div>
+                  <div class="artboard artboard-horizontal  rounded border-[20px] border-gray-60 bg-[#B7B5B8CC] phone-4">
+                      <div class=" flex justify-center">
+                          <p class="bg-gray-900 text-white p-4 rounded-b-lg text-center">Don't watch keyboard  while playing...</p>
+                      </div>
+                      <h1 class="text-9xl text-center mt-10     text-black anton-regular ">Y</h1>
+                  </div>
+                </div>
+                <div>
+                    <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">q</kbd>
+                        <kbd class="kbd">w</kbd>
+                        <kbd class="kbd">e</kbd>
+                        <kbd class="kbd">r</kbd>
+                        <kbd class="kbd">t</kbd>
+                        <kbd class="kbd">y</kbd>
+                        <kbd class="kbd">u</kbd>
+                        <kbd class="kbd">i</kbd>
+                        <kbd class="kbd">o</kbd>
+                        <kbd class="kbd">p</kbd>
+                      </div> 
+                      <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">a</kbd>
+                        <kbd class="kbd">s</kbd>
+                        <kbd class="kbd">d</kbd>
+                        <kbd class="kbd">f</kbd>
+                        <kbd class="kbd">g</kbd>
+                        <kbd class="kbd">h</kbd>
+                        <kbd class="kbd">j</kbd>
+                        <kbd class="kbd">k</kbd>
+                        <kbd class="kbd">l</kbd>
+                      </div> 
+                      <div class="flex justify-center gap-1 my-1 w-full">
+                        <kbd class="kbd">z</kbd>
+                        <kbd class="kbd">x</kbd>
+                        <kbd class="kbd">c</kbd>
+                        <kbd class="kbd">v</kbd>
+                        <kbd class="kbd">b</kbd>
+                        <kbd class="kbd">n</kbd>
+                        <kbd class="kbd">m</kbd>
+                        <kbd class="kbd">/</kbd>
+                      </div>
+                </div>
+                <div class="flex justify-between w-2/4">
+                  <button class="btn">Button</button>
+                  <button class="btn btn-neutral">Neutral</button>
+              </div>
+                <!-- btn score -->
+       </div>
+      
         </section>
         <section id="home">
 
