--- a/index.html
+++ b/index.html
@@ -2,95 +2,101 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.0/dist/full.min.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- fontawosome -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.0/dist/full.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- fontawosome -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <main class="min-h-screen bg-[#010313] bg-no-repeat bg-center bg-[url(images/background.png)]">
-        <!-- hoem screen -->
-        <section class="home hidden  min-h-screen flex justify-center items-center ">
-         <div class="text-center space-y-5 ">
-            <h1 class="text-9xl text-white anton-regular">ALPHABET CLASH
-            </h1>
-            <p class="text-white text-2xl">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-            <button class="btn btn-white text-black">Play Now</button>
-         </div>
-    
-        </section>
-        <!-- playground start -->
-        <section id="playground  ">
+  <main class="min-h-screen bg-[#010313] bg-no-repeat bg-center bg-[url(images/background.png)]">
+    <!-- hoem screen -->
+    <section class="home   min-h-screen flex justify-center items-center ">
+      <div class="text-center space-y-5 ">
+        <h1 class="text-9xl text-white anton-regular">ALPHABET CLASH
+        </h1>
+        <p class="text-white text-2xl">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+        <button class="btn btn-white play-now text-black">Play Now</button>
+      </div>
 
-            <div class="space-y-5 flex justify-center min-h-screen items-center flex-col">
-                <!-- keyboard -->
-                <div>
-                  <div class="artboard artboard-horizontal  rounded border-[20px] border-gray-60 bg-[#B7B5B8CC] phone-4">
-                      <div class=" flex justify-center">
-                          <p class="bg-gray-900 text-white p-4 rounded-b-lg text-center">Don't watch keyboard  while playing...</p>
-                      </div>
-                      <h1 class="text-9xl text-center mt-10     text-black anton-regular ">Y</h1>
-                  </div>
-                </div>
-                <div>
-                    <div class="flex justify-center gap-1 my-1 w-full">
-                        <kbd class="kbd">q</kbd>
-                        <kbd class="kbd">w</kbd>
-                        <kbd class="kbd">e</kbd>
-                        <kbd class="kbd">r</kbd>
-                        <kbd class="kbd">t</kbd>
-                        <kbd class="kbd">y</kbd>
-                        <kbd class="kbd">u</kbd>
-                        <kbd class="kbd">i</kbd>
-                        <kbd class="kbd">o</kbd>
-                        <kbd class="kbd">p</kbd>
-                      </div> 
-                      <div class="flex justify-center gap-1 my-1 w-full">
-                        <kbd class="kbd">a</kbd>
-                        <kbd class="kbd">s</kbd>
-                        <kbd class="kbd">d</kbd>
-                        <kbd class="kbd">f</kbd>
-                        <kbd class="kbd">g</kbd>
-                        <kbd class="kbd">h</kbd>
-                        <kbd class="kbd">j</kbd>
-                        <kbd class="kbd">k</kbd>
-                        <kbd class="kbd">l</kbd>
-                      </div> 
-                      <div class="flex justify-center gap-1 my-1 w-full">
-                        <kbd class="kbd">z</kbd>
-                        <kbd class="kbd">x</kbd>
-                        <kbd class="kbd">c</kbd>
-                        <kbd class="kbd">v</kbd>
-                        <kbd class="kbd">b</kbd>
-                        <kbd class="kbd">n</kbd>
-                        <kbd class="kbd">m</kbd>
-                        <kbd class="kbd">/</kbd>
-                      </div>
-                </div>
-                <div class="flex justify-between w-2/4">
-                  <button class="btn">Button</button>
-                  <button class="btn btn-neutral">Neutral</button>
-              </div>
-                <!-- btn score -->
-       </div>
-      
-        </section>
-        <section id="home">
+    </section>
+    <!-- playground start -->
+    <section class="playground  hidden">
 
-        </section>
-    </main>
+      <div class="space-y-5 flex justify-center min-h-screen items-center flex-col">
+        <!-- keyboard -->
+        <div>
+          <div class="artboard artboard-horizontal  rounded border-[20px] border-gray-60 bg-[#B7B5B8CC] phone-4">
+            <div class=" flex justify-center">
+              <p class="bg-gray-900 text-white p-4 rounded-b-lg text-center">Don't watch keyboard while playing...</p>
+            </div>
+            <h1 class="text-9xl text-center mt-10     text-black  poppins-semibold ">Y</h1>
+          </div>
+        </div>
+        <div>
+          <div class="flex justify-center gap-1 my-1 w-full">
+            <kbd class="kbd">q</kbd>
+            <kbd class="kbd">w</kbd>
+            <kbd class="kbd">e</kbd>
+            <kbd class="kbd">r</kbd>
+            <kbd class="kbd">t</kbd>
+            <kbd class="kbd">y</kbd>
+            <kbd class="kbd">u</kbd>
+            <kbd class="kbd">i</kbd>
+            <kbd class="kbd">o</kbd>
+            <kbd class="kbd">p</kbd>
+          </div>
+          <div class="flex justify-center gap-1 my-1 w-full">
+            <kbd class="kbd">a</kbd>
+            <kbd class="kbd">s</kbd>
+            <kbd class="kbd">d</kbd>
+            <kbd class="kbd">f</kbd>
+            <kbd class="kbd">g</kbd>
+            <kbd class="kbd">h</kbd>
+            <kbd class="kbd">j</kbd>
+            <kbd class="kbd">k</kbd>
+            <kbd class="kbd">l</kbd>
+          </div>
+          <div class="flex justify-center gap-1 my-1 w-full">
+            <kbd class="kbd">z</kbd>
+            <kbd class="kbd">x</kbd>
+            <kbd class="kbd">c</kbd>
+            <kbd class="kbd">v</kbd>
+            <kbd class="kbd">b</kbd>
+            <kbd class="kbd">n</kbd>
+            <kbd class="kbd">m</kbd>
+            <kbd class="kbd">/</kbd>
+          </div>
+        </div>
+        <div class="flex justify-between w-2/4">
+          <button class="btn">Button</button>
+          <button class="btn btn-neutral">Neutral</button>
+        </div>
+        <!-- btn score -->
+      </div>
 
-    <script src="script.js"></script>
+    </section>
+
+    <!-- score section -->
+    <section class="score flex items-center justify-center min-h-screen hidden">
+      <div class="space-y-7 text-center  p-3 bg-gradient-to-r from-violet-500 to-fuchsia-500 rounded-lg">
+        <h1 class="text-9xl text-white poppins-extrabold">Score : <span class="poppins-medium">15</span></h1>
+        <button class="btn bg-white text-3xl  uppercase">Play Now</button>
+        <p class="text-3xl text-white">Practice will make you Pro</p>
+      </div>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 
 </html>
