--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 
   <main class="min-h-screen bg-[#010313] bg-no-repeat bg-center bg-[url(images/background.png)]">
     <!-- hoem screen -->
-    <section class="home   min-h-screen flex justify-center items-center ">
+    <section class="home  min-h-screen flex justify-center items-center duration-1000">
       <div class="text-center space-y-5 ">
         <h1 class="text-9xl text-white anton-regular">ALPHABET CLASH
         </h1>
         <p class="text-white text-2xl">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-        <button class="btn btn-white play-now text-black">Play Now</button>
+        <button onclick="playNow()" class="btn btn-white play-now text-black">Play Now</button>
       </div>
 
     </section>
     <!-- playground start -->
-    <section class="playground  hidden">
+    <section class="playground  hidden duration-1000">
 
       <div class="space-y-5 flex justify-center min-h-screen items-center flex-col">
         <!-- keyboard -->
@@ -39,42 +39,42 @@
             <div class=" flex justify-center">
               <p class="bg-gray-900 text-white p-4 rounded-b-lg text-center">Don't watch keyboard while playing...</p>
             </div>
-            <h1 class="text-9xl text-center mt-10     text-black  poppins-semibold ">Y</h1>
+            <h1 class="text-9xl text-center mt-10 currentAlphabet text-black  poppins-semibold ">Y</h1>
           </div>
         </div>
         <div>
           <div class="flex justify-center gap-1 my-1 w-full">
-            <kbd class="kbd">q</kbd>
-            <kbd class="kbd">w</kbd>
-            <kbd class="kbd">e</kbd>
-            <kbd class="kbd">r</kbd>
-            <kbd class="kbd">t</kbd>
-            <kbd class="kbd">y</kbd>
-            <kbd class="kbd">u</kbd>
-            <kbd class="kbd">i</kbd>
-            <kbd class="kbd">o</kbd>
-            <kbd class="kbd">p</kbd>
+            <kbd id="w" class="kbd">w</kbd>
+            <kbd id="e" class="kbd">e</kbd>
+            <kbd id="q" class="kbd">q</kbd>
+            <kbd id="r" class="kbd">r</kbd>
+            <kbd id="t" class="kbd">t</kbd>
+            <kbd id="y" class="kbd">y</kbd>
+            <kbd id="u" class="kbd">u</kbd>
+            <kbd id="i" class="kbd">i</kbd>
+            <kbd id="o" class="kbd">o</kbd>
+            <kbd id="p" class="kbd">p</kbd>
           </div>
           <div class="flex justify-center gap-1 my-1 w-full">
-            <kbd class="kbd">a</kbd>
-            <kbd class="kbd">s</kbd>
-            <kbd class="kbd">d</kbd>
-            <kbd class="kbd">f</kbd>
-            <kbd class="kbd">g</kbd>
-            <kbd class="kbd">h</kbd>
-            <kbd class="kbd">j</kbd>
-            <kbd class="kbd">k</kbd>
-            <kbd class="kbd">l</kbd>
+            <kbd id="a" class="kbd">a</kbd>
+            <kbd id="s" class="kbd">s</kbd>
+            <kbd id="d" class="kbd">d</kbd>
+            <kbd id="f" class="kbd">f</kbd>
+            <kbd id="g" class="kbd">g</kbd>
+            <kbd id="h" class="kbd">h</kbd>
+            <kbd id="j" class="kbd">j</kbd>
+            <kbd id="k" class="kbd">k</kbd>
+            <kbd id="l" class="kbd">l</kbd>
           </div>
           <div class="flex justify-center gap-1 my-1 w-full">
-            <kbd class="kbd">z</kbd>
-            <kbd class="kbd">x</kbd>
-            <kbd class="kbd">c</kbd>
-            <kbd class="kbd">v</kbd>
-            <kbd class="kbd">b</kbd>
-            <kbd class="kbd">n</kbd>
-            <kbd class="kbd">m</kbd>
-            <kbd class="kbd">/</kbd>
+            <kbd id="z" class="kbd">z</kbd>
+            <kbd id="x" class="kbd">x</kbd>
+            <kbd id="c" class="kbd">c</kbd>
+            <kbd id="v" class="kbd">v</kbd>
+            <kbd id="b" class="kbd">b</kbd>
+            <kbd id="n" class="kbd">n</kbd>
+            <kbd id="m" class="kbd">m</kbd>
+            <kbd id="/" class="kbd">/</kbd>
           </div>
         </div>
         <div class="flex justify-between w-2/4">
@@ -85,7 +85,6 @@
       </div>
 
     </section>
-
     <!-- score section -->
     <section class="score flex items-center justify-center min-h-screen hidden">
       <div class="space-y-7 text-center  p-3 bg-gradient-to-r from-violet-500 to-fuchsia-500 rounded-lg">
@@ -95,7 +94,7 @@
       </div>
     </section>
   </main>
-
+  <script src="utility.js"></script>
   <script src="script.js"></script>
 </body>
 
