--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           </div>
         </div>
         <div class="flex justify-between w-2/4">
-          <button class="btn">Button</button>
-          <button class="btn btn-neutral">Neutral</button>
+          <button class="btn">Life <span class="life">5</span></button>
+          <button class="btn btn-neutral">Score <span class="score">0</span></button>
         </div>
         <!-- btn score -->
       </div>
