--- a/index.html
+++ b/index.html
@@ -89,11 +89,14 @@
     <section class="scoreFooter flex items-center justify-center min-h-screen hidden">
       <div class="space-y-7 text-center  p-3 bg-gradient-to-r from-violet-500 to-fuchsia-500 rounded-lg">
         <h1 class="text-9xl text-white poppins-extrabold">Score : <span class="poppins-medium game-score">15</span></h1>
-        <button onclick="playAgain()" class="btn bg-white text-3xl playAgain  uppercase">Play again</button>
+        <button  class="btn bg-white text-3xl date">
+
+        </button>
         <p class="text-3xl text-white">Practice will make you Pro</p>
       </div>
     </section>
   </main>
+
   <script src="utility.js"></script>
   <script src="script.js"></script>
 </body>
