--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.0/dist/full.min.css" rel="stylesheet" type="text/css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- fontawosome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -35,7 +37,7 @@
       <div class="space-y-5 flex justify-center min-h-screen items-center flex-col">
         <!-- keyboard -->
         <div>
-          <div class="artboard artboard-horizontal  rounded border-[20px] border-gray-60 bg-[#B7B5B8CC] phone-4">
+          <div id="artboard" class="artboard artboard-horizontal  rounded border-[20px] border-gray-60 bg-[#B7B5B8CC] phone-4">
             <div class=" flex justify-center">
               <p class="bg-gray-900 text-white p-4 rounded-b-lg text-center">Don't watch keyboard while playing...</p>
             </div>
@@ -89,13 +91,27 @@
     <section class="scoreFooter flex items-center justify-center min-h-screen hidden">
       <div class="space-y-7 text-center  p-3 bg-gradient-to-r from-violet-500 to-fuchsia-500 rounded-lg">
         <h1 class="text-9xl text-white poppins-extrabold">Score : <span class="poppins-medium game-score">15</span></h1>
-        <button  class="btn bg-white text-3xl date">
-
+        <button onclick="playAgain()"  class="btn bg-white text-3xl date">
+          Play again
         </button>
         <p class="text-3xl text-white">Practice will make you Pro</p>
       </div>
     </section>
+
+    <!-- modal -->
+    <section id="modal" class="w-full h-full flex  bg-[#ffffff17]  justify-center items-center fixed top-0 left-0  hidden">
+      <div class="bg-slate-500 w-1/3 rounded p-5 text-white">
+        <div class="flex justify-between">
+        <h1>Hello Error</h1>
+        <i id="xCros" class="fa-regular fa-circle-xmark text-3xl hover:text-red-700"></i>
+        </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus nobis, sint mollitia debitis perferendis sequi tempora adipisci obcaecati, commodi molestiae voluptas consequuntur ea at maxime. Quis quasi libero mollitia laborum.</p>
+      </div>
+    </section>
   </main>
+
+
+
 
   <script src="utility.js"></script>
   <script src="script.js"></script>
